--- a/doc/mkdssp.1
+++ b/doc/mkdssp.1
@@ -1,4 +1,4 @@
-.TH mkdssp 1 "2021-08-31" "version 4.0.1" "User Commands"
+.TH mkdssp 1 "2021-08-31" "version 4.0.2" "User Commands"
 .if n .ad l
 .nh
 .SH NAME
@@ -19,7 +19,7 @@ information in the _struct_conf category.
 Since version 4.0 the mkdssp program also assigns PPII helices.
 .SH OPTIONS
 The input file can be either mmCIF or PDB format and the file may be
-gzip or bzip2 compressed. Note that input files must be formatted correctly.
+gzip compressed. Note that input files must be formatted correctly.
 E.g. PDB files must have a CRYST1 record. More info:
 https://www.wwpdb.org/documentation/file-format-content/format33/sect8.html#CRYST1
 .sp
