--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+Version 4.0.5
+- The options for loading custom dictionary files and the like are now
+  visible in the help again.
+
 Version 4.0.4
 - New version string logic
 - Improved makefile
