add option to man page

--- a/doc/mkdssp.1
+++ b/doc/mkdssp.1
@@ -33,6 +33,9 @@ choose to output format, but if it is unclear, mmcif is the default. Use
 this option to force output in either the old fixed column DSSP format or
 the new annotated mmCIF format.
 .TP
+\fB--no-dssp-categories\fR
+When writing mmCIF files, suppress the output of all dssp_ categories.
+.TP
 \fB--min-pp-stretch\fR
 This option can be used to define the minimal number of residues with PHI/PSI
 angles within the range required to assing a PP helix.
