--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+Version 4.4.1
+- Generate documentation only when requested
+
 Version 4.4.0
 - Packaging (split out the web server again)
 - Added markdown doc file, all doc files are now created from mkdssp.1
